Styles fixes
- post headers don't align justified
- fixed inline code that had become display: block
- added a bit of padding to the main container to render better on mobile

--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -35,6 +35,7 @@ h3
 
 .page
   max-width: 700px
+  padding: 0 8px
   margin: auto
 
 .header
@@ -56,6 +57,7 @@ h3
   
   h2
     margin-bottom: 36px
+    text-align: left
 
   p
     margin: 1.5em 0
@@ -80,10 +82,11 @@ h3
     border-left: none
     border-bottom: none
 
-  code
-    display: block
-    overflow-x: scroll
-    padding: 6px 10px
+  pre
+    code
+      display: block
+      overflow-x: scroll
+      padding: 6px 10px
 
 // Utils
 //
